--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <title>P H O C U S</title>
   </head>
   <body>
+    <style>
+      body{
+        background-color: rgb(251,253,254);
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
