--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
   <body>
     <style>
       body{
+        padding: 0px;
+        margin: 0px;
         background-color: rgb(251,253,254);
       }
     </style>
